<resources>
    <string name="app_name">Application</string>
    <string name="select_an_option">Select an Option</string>
    <string name="go">Go</string>
    <string name="display">Display</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="insert">Insert</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="cgpa">CGPA</string>
    <string name="id_number">Id Number:</string>
    <string name="full_name">Full Name</string>
    <string name="name">Name:</string>
    <string name="surname">Surname</string>
    <string name="animation">Animation</string>
    <string name="fade_in">Fade In</string>
    <string name="fade_out">Fade Out</string>
    <string name="slide_in">Slide In</string>
    <string name="slide_down">Slide Down</string>
    <string name="animate">Animate</string>
    <string name="choose_animation">Choose animation:</string>
    <string name="sqllite">SQLite</string>
</resources>